--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,12 +2,12 @@ project:
   type: website
 
 website:
-  title: "blog-template"
+  title: "Aidan Scott Blog"
   navbar:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/etc5523-2022
+        href: https://https://github.com/ETC5523-2025/assignment-3-creating-a-blog-a1dansc0tt
 format:
   html:
     theme: cosmo
