--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ website:
     right:
       - about.qmd
       - icon: github
-        href: https://https://github.com/ETC5523-2025/assignment-3-creating-a-blog-a1dansc0tt
+        href: https://github.com/a1dansc0tt
 format:
   html:
     theme: cosmo
