--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "Aidan Scott Blog"
+  title: "The Aidan Scott Blog"
   navbar:
     right:
       - about.qmd
